Color variables created / Flaticon bug fixed

--- a/HOMEWORK/assets/css/scss/_variables.scss
+++ b/HOMEWORK/assets/css/scss/_variables.scss
@@ -12,3 +12,14 @@ $font-Flaticon-pinterest-social-logo: "\f109";
 $font-Flaticon-youtube-logo: "\f10a";
 $font-Flaticon-keyboard-right-arrow-button: "\f10b";
 
+//COLORS
+$color-green: #7ac64d;
+$color-pink:#e3207b;
+$color-matte:#333333;
+$color-dark:#222;
+$color-text: #999;
+$color-background:#222831;
+$color-link:#FFFFFF;
+
+//
+
