--- a/HOMEWORK/assets/css/scss/fonts/_font-icon.scss
+++ b/HOMEWORK/assets/css/scss/fonts/_font-icon.scss
@@ -4,49 +4,94 @@
     */
 
     @font-face {
+      font-family: "Flaticon";
+      src: url('../fonts/flat-icon/Flaticon.eot');
+      src: url('../fonts/flat-icon/Flaticon.eot') format("embedded-opentype"),
+        url('../fonts/flat-icon/Flaticon.woff2') format("woff2"),
+        url('../fonts/flat-icon/Flaticon.woff') format("woff"),
+        url('../fonts/flat-icon/Flaticon.ttf') format("truetype"),
+        url('../fonts/flat-icon/Flaticon.svg') format("svg");
+      font-weight: normal;
+      font-style: normal;
+    }
+
+    @media screen and (-webkit-min-device-pixel-ratio:0) {
+      @font-face {
         font-family: "Flaticon";
-        src: url('../fonts/flat-icon/Flaticon.eot');
-        src: url('../fonts/flat-icon/Flaticon.eot') format("embedded-opentype"),
-             url('../fonts/flat-icon/Flaticon.woff2') format("woff2"),
-             url('../fonts/flat-icon/Flaticon.woff') format("woff"),
-             url('../fonts/flat-icon/Flaticon.ttf') format("truetype"),
-             url('../fonts/flat-icon/Flaticon.svg') format("svg");
-        font-weight: normal;
-        font-style: normal;
+        src: url('../fonts/flat-icon/Flaticon.svg') format("svg");
       }
-      
-      @media screen and (-webkit-min-device-pixel-ratio:0) {
-        @font-face {
-          font-family: "Flaticon";
-          src: url('../fonts/flat-icon/Flaticon.svg') format("svg");
-        }
-      }
-      
-          .fi:before{
-              display: inline-block;
-        font-family: "Flaticon";
-        font-style: normal;
-        font-weight: normal;
-        font-variant: normal;
-        line-height: 1;
-        text-decoration: inherit;
-        text-rendering: optimizeLegibility;
-        text-transform: none;
-        -moz-osx-font-smoothing: grayscale;
-        -webkit-font-smoothing: antialiased;
-        
-          }
-      
-      .flaticon-tv:before { content: "\f100"; }
-      .flaticon-computer-tablet:before { content: "\f101"; }
-      .flaticon-phone:before { content: "\f102"; }
-      .flaticon-cloud-storage-download:before { content: "\f103"; }
-      .flaticon-remove-symbol:before { content: "\f104"; }
-      .flaticon-facebook-logo:before { content: "\f105"; }
-      .flaticon-twitter-logo-silhouette:before { content: "\f106"; }
-      .flaticon-instagram-logo:before { content: "\f107"; }
-      .flaticon-linkedin-logo:before { content: "\f108"; }
-      .flaticon-pinterest-social-logo:before { content: "\f109"; }
-      .flaticon-youtube-logo:before { content: "\f10a"; }
-      .flaticon-keyboard-right-arrow-button:before { content: "\f10b"; }
-          
+    }
+
+    [class^="flaticon-"]:before,
+    [class*=" flaticon-"]:before,
+    [class^="flaticon-"]:after,
+    [class*=" flaticon-"]:after {
+      font-family: Flaticon;
+      font-size: 20px;
+      font-style: normal;
+      margin-left: 20px;
+    }
+
+
+    .fi:before {
+      display: inline-block;
+      font-family: "Flaticon";
+      font-style: normal;
+      font-weight: normal;
+      font-variant: normal;
+      line-height: 1;
+      text-decoration: inherit;
+      text-rendering: optimizeLegibility;
+      text-transform: none;
+      -moz-osx-font-smoothing: grayscale;
+      -webkit-font-smoothing: antialiased;
+
+    }
+
+    .flaticon-tv:before {
+      content: "\f100";
+    }
+
+    .flaticon-computer-tablet:before {
+      content: "\f101";
+    }
+
+    .flaticon-phone:before {
+      content: "\f102";
+    }
+
+    .flaticon-cloud-storage-download:before {
+      content: "\f103";
+    }
+
+    .flaticon-remove-symbol:before {
+      content: "\f104";
+    }
+
+    .flaticon-facebook-logo:before {
+      content: "\f105";
+    }
+
+    .flaticon-twitter-logo-silhouette:before {
+      content: "\f106";
+    }
+
+    .flaticon-instagram-logo:before {
+      content: "\f107";
+    }
+
+    .flaticon-linkedin-logo:before {
+      content: "\f108";
+    }
+
+    .flaticon-pinterest-social-logo:before {
+      content: "\f109";
+    }
+
+    .flaticon-youtube-logo:before {
+      content: "\f10a";
+    }
+
+    .flaticon-keyboard-right-arrow-button:before {
+      content: "\f10b";
+    }
