--- a/HOMEWORK/assets/css/scss/_variables.scss
+++ b/HOMEWORK/assets/css/scss/_variables.scss
@@ -19,7 +19,12 @@ $color-matte:#333333;
 $color-dark:#222;
 $color-text: #999;
 $color-background:#222831;
-$color-link:#FFFFFF;
+$color-section_header_navitem-hover:#FFFFFF;
+$color-navmenu_item: rgba(255,255,255,0.6);
 
-//
+//FONTS TYPE
+$font-header_dejee: 'Open-Sans';
+$font-navmenu-dejee_section-header_events-header: 'Oswald';
+$font-navmenu-item_text_buttons_person-text_events-desc: 'Nunito';
+
 
