--- a/HOMEWORK/assets/css/scss/layouts/_header.scss
+++ b/HOMEWORK/assets/css/scss/layouts/_header.scss
@@ -1,11 +1,9 @@
 #header{
+    background-color: $color-matte;
     .header_panel{
+        display:flex;
+        justify-content: center;
         
-        .logo_block{
-
-        }
-        .responsive_block{
-
-        }
+        
     }
 }
