--- a/HOMEWORK/assets/css/grid.css
+++ b/HOMEWORK/assets/css/grid.css
@@ -7,7 +7,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-html {
+/* html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -292,7 +292,7 @@ hr {
 }
 [role="button"] {
   cursor: pointer;
-}
+} */
 .container {
   padding-right: 15px;
   padding-left: 15px;
