--- a/HOMEWORK/assets/css/scss/_mixins.scss
+++ b/HOMEWORK/assets/css/scss/_mixins.scss
@@ -1,24 +1,28 @@
 @mixin section_header_h1 {
     font-family: $font-navmenu-dejee_section-header_events-header; //oswald
-    font-size: 12px;
+    letter-spacing: 16px;
+    font-size: 32px;
     font-weight: 600;
     color: $color-section_header_navitem-hover; //white
     position: relative;
-    padding: 0 0 8px;
+    padding: 0 0 20px;
+    margin: 0 0 28px;
 }
 @mixin section_header_h1_before{
     content: '';
     background: $color-pink;
-    width: 20px;
-    height: 1px;
+    width: 70px;
+    height: 2px;
     position: absolute;
     bottom: 0;    
 }
 @mixin section_header_desc {
     font-family: $font-navmenu-item_text_buttons_person-text_events-desc;
-    color: $color-text !important;
-    font-size: 6px;
+    color: $color-text;
+    font-size: 17.6px;
     padding: 0 0 16px;
+    text-align: center;
+    line-height: 30px;
 }
 
 @mixin navmenu_item_hover{
