Events, Social and Footer are done

--- a/HOMEWORK/assets/css/scss/_variables.scss
+++ b/HOMEWORK/assets/css/scss/_variables.scss
@@ -18,6 +18,8 @@ $color-pink:#e3207b;
 $color-pink-hover: #aa0c57;
 $color-matte:#333333;
 $color-dark:#222;
+$color-footer:#222831;
+$color-listeners-events: #13171d;
 $color-text: #999;
 $color-background:#222831;
 $color-section_header_navitem-hover:#FFFFFF; //WHITE
