--- a/HOMEWORK/assets/css/grid.css
+++ b/HOMEWORK/assets/css/grid.css
@@ -815,40 +815,40 @@ hr {
     float: left;
   }
   .col-lg-12 {
-    width: 100%;
+    width: calc(100% / 1 - 30px);
   }
   .col-lg-11 {
-    width: 91.66666667%;
+    width: calc(100% * 11 / 12 - 30px);
   }
   .col-lg-10 {
-    width: 83.33333333%;
+    width: calc(100% * 5 / 6 - 30px);
   }
   .col-lg-9 {
-    width: 75%;
+    width: calc(100% * 3 / 4 - 30px);
   }
   .col-lg-8 {
-    width: 66.66666667%;
+    width: calc(100% * 2 / 4 - 30px);
   }
   .col-lg-7 {
-    width: 58.33333333%;
+    width: calc(100% * 7 / 12 - 30px);
   }
   .col-lg-6 {
-    width: 50%;
+    width: calc(100% / 2 - 30px);
   }
   .col-lg-5 {
-    width: 41.66666667%;
+    width: calc(100% * 5 / 12 - 30px);
   }
   .col-lg-4 {
-    width: 33.33333333%;
+    width: calc(100% / 3 - 30px);
   }
   .col-lg-3 {
-    width: 25%;
+    width: calc(100% / 4 - 30px);
   }
   .col-lg-2 {
-    width: 16.66666667%;
+    width: calc(100% / 6 - 30px);
   }
   .col-lg-1 {
-    width: 8.33333333%;
+    width: calc(100% / 12 - 30px);
   }
   .col-lg-pull-12 {
     right: 100%;
