--- a/HOMEWORK/assets/css/scss/_mixins.scss
+++ b/HOMEWORK/assets/css/scss/_mixins.scss
@@ -23,6 +23,19 @@
     padding: 0 0 16px;
     text-align: center;
     line-height: 30px;
+    width: 45%;
+    margin: 0 auto;
+}
+
+@mixin column_header_h1{
+    font-family: "Oswald";
+    letter-spacing: 3px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #FFFFFF;
+    position: relative;
+    padding: 0 0 20px;
+    margin: 0 0 28px;
 }
 
 @mixin navmenu_item_hover{
