--- a/HOMEWORK/assets/css/scss/components/_social-panel.scss
+++ b/HOMEWORK/assets/css/scss/components/_social-panel.scss
@@ -18,7 +18,7 @@
                     text-decoration: none;
                     color: $color-section_header_navitem-hover;
                     i{
-                        font-size:20px;
+                        font-size:25px;
                     }
                 }
             }
@@ -26,26 +26,19 @@
     }
 }
 
-// <section id="social">
-//             <div class="container fluid">
-//                 <div class="row">
-//                     <div class="col-lg-12">                       
-//                            <div class="social_panel_full">
-//                                <ul>
-//                                    <li><a href="#"><i class="flaticon-facebook-logo"></i></a></li>
-//                                    <li><a href="#"><i class="flaticon-twitter-logo-silhouette"></i></a></li>
-//                                    <li><a href="#"><i class="flaticon-instagram-logo"></i></a></li>
-//                                    <li><a href="#"><i class="flaticon-linkedin-logo"></i></a></li>
-//                                    <li><a href="#"><i class="flaticon-pinterest-social-logo"></i></a></li>
-//                                    <li><a href="#"><i class="flaticon-youtube-logo"></i></a></li>
-//                                </ul>                         
-//                             </div>                            
-//                         </div>
-//                     </div>
-//                 </div>
-//             </div>
-//         </section>
-
-.socail_panel_mini{
-
+.social_mini{
+    li{
+        display:inline-block;
+        padding: 0px 20px 0px 0px !important;
+        text-align: center;
+        a{
+            text-decoration: none;
+            i{
+                font-size: 17px;
+            }
+        }
+    }
 }
+
+
+
