--- a/HOMEWORK/assets/css/scss/fonts/_font-icon.scss
+++ b/HOMEWORK/assets/css/scss/fonts/_font-icon.scss
@@ -95,3 +95,34 @@
     .flaticon-keyboard-right-arrow-button:before {
       content: "\f10b";
     }
+
+    @font-face {
+      font-family: 'icomoon';
+      src:  url('../fonts/flat-icon/icomoon.eot');
+      src:  url('../fonts/flat-icon/icomoon.eot') format('embedded-opentype'),
+        url('../fonts/flat-icon/icomoon.ttf') format('truetype'),
+        url('../fonts/flat-icon/icomoon.woff') format('woff'),
+        url('../fonts/flat-icon/icomoon.svg') format('svg');
+      font-weight: normal;
+      font-style: normal;
+    }
+    
+    [class^="icon-"], [class*=" icon-"] {
+      /* use !important to prevent issues with browser extensions that change fonts */
+      font-family: 'icomoon' !important;
+      speak: none;
+      font-style: normal;
+      font-weight: normal;
+      font-variant: normal;
+      text-transform: none;
+      line-height: 1;
+    
+      /* Better Font Rendering =========== */
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+    
+    .icon-heart:before {
+      content: "\e9da";
+    }
+    
