--- a/HOMEWORK/assets/css/scss/main.scss
+++ b/HOMEWORK/assets/css/scss/main.scss
@@ -18,6 +18,6 @@
 #footer, #djs{
     background-color: $color-footer;
 }
-#events{
+#events, #listeners{
     background-color: $color-listeners-events;
 }
