--- a/HOMEWORK/assets/css/scss/components/_index.scss
+++ b/HOMEWORK/assets/css/scss/components/_index.scss
@@ -1,7 +1,7 @@
 @import './buttons';
 @import './djs-item';
 @import './events-item';
-@import './liseteners-item';
+@import './listeners-item';
 @import './section-headings';
 @import './social-panel';
 @import './navmenu';
