--- a/HOMEWORK/assets/css/scss/main.scss
+++ b/HOMEWORK/assets/css/scss/main.scss
@@ -15,7 +15,7 @@
 //MEDIA-QUERY
 @import './grid/custom_media';
 
-#footer, #djs{
+#footer, #djs, #podcast, #shows{
     background-color: $color-footer;
 }
 #events, #listeners{
