--- a/HOMEWORK/assets/css/scss/main.css
+++ b/HOMEWORK/assets/css/scss/main.css
@@ -1,4 +1,9 @@
-@charset "UTF-8";
+.p-100 {
+  padding: 100px 0px; }
+
+.p-50 {
+  padding: 50px 0px; }
+
 @font-face {
   font-family: 'Nunito';
   src: url("../fonts/NunitoSans-Regular.WOFF");
@@ -48,6 +53,13 @@ Creation date: 01/07/2019 12:14
   @font-face {
     font-family: "Flaticon";
     src: url("../fonts/flat-icon/Flaticon.svg") format("svg"); } }
+[class^="flaticon-"]:before,
+[class*=" flaticon-"]:before,
+[class^="flaticon-"]:after,
+[class*=" flaticon-"]:after {
+  font-family: Flaticon;
+  font-style: normal; }
+
 .fi:before {
   display: inline-block;
   font-family: "Flaticon";
@@ -97,10 +109,394 @@ Creation date: 01/07/2019 12:14
 .flaticon-keyboard-right-arrow-button:before {
   content: "\f10b"; }
 
-.nunito {
-  font-family: 'Nunito';
-  font-weight: 800; }
+@font-face {
+  font-family: 'icomoon';
+  src: url("../fonts/flat-icon/icomoon.eot");
+  src: url("../fonts/flat-icon/icomoon.eot") format("embedded-opentype"), url("../fonts/flat-icon/icomoon.ttf") format("truetype"), url("../fonts/flat-icon/icomoon.woff") format("woff"), url("../fonts/flat-icon/icomoon.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
 
-.nunito::after {
-  content: "";
-  font-family: "Flaticon"; }
+.icon-heart:before {
+  content: "\e9da"; }
+
+#header {
+  background-color: #333333; }
+  #header .header_panel {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    #header .header_panel .logo_side ul {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
+      #header .header_panel .logo_side ul li {
+        display: block;
+        text-align: center; }
+        #header .header_panel .logo_side ul li:last-child {
+          padding: 20px 36px;
+          margin-left: 20px;
+          background-color: #222; }
+        #header .header_panel .logo_side ul li a {
+          text-decoration: none;
+          color: rgba(255, 255, 255, 0.6);
+          font-family: "Open-Sans";
+          font-size: 16px;
+          letter-spacing: 1px; }
+          #header .header_panel .logo_side ul li a span {
+            margin-right: 5px; }
+          #header .header_panel .logo_side ul li a img {
+            height: 30px; }
+    #header .header_panel .responsive_side ul {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
+      #header .header_panel .responsive_side ul li {
+        display: block;
+        padding: 13px 30px;
+        border-left: 1px solid #999; }
+        #header .header_panel .responsive_side ul li:nth-child(4) {
+          background-color: #7ac64d; }
+          #header .header_panel .responsive_side ul li:nth-child(4) a {
+            color: #FFFFFF; }
+        #header .header_panel .responsive_side ul li a {
+          text-decoration: none;
+          color: rgba(255, 255, 255, 0.6);
+          font-size: 30px;
+          -webkit-transition: 0.3s all ease;
+          transition: 0.3s all ease; }
+          #header .header_panel .responsive_side ul li a:hover {
+            color: #FFFFFF;
+            -webkit-transition: 0.3s all ease;
+            transition: 0.3s all ease; }
+
+#footer .footer_item {
+  margin: 40px 0px 40px 0px; }
+  #footer .footer_item .column_desc {
+    color: #999;
+    font-family: "Nunito";
+    line-height: 30px;
+    font-size: 17.6px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start; }
+    #footer .footer_item .column_desc ul {
+      padding: 0px 50px 0px 0px; }
+      #footer .footer_item .column_desc ul li {
+        padding: 0px 0px 10px 0px; }
+        #footer .footer_item .column_desc ul li a {
+          text-decoration: none;
+          color: rgba(255, 255, 255, 0.6);
+          font-size: 18px;
+          -webkit-transition: 0.3s all ease;
+          transition: 0.3s all ease; }
+          #footer .footer_item .column_desc ul li a:hover {
+            color: #FFFFFF;
+            -webkit-transition: 0.3s all ease;
+            transition: 0.3s all ease; }
+    #footer .footer_item .column_desc input {
+      padding: 15px 20px;
+      outline: none;
+      border: 1px solid white;
+      border-radius: 2px;
+      background-color: #222831;
+      color: white; }
+      #footer .footer_item .column_desc input::-webkit-input-placeholder {
+        font-style: italic;
+        font-size: 15px; }
+      #footer .footer_item .column_desc input:-ms-input-placeholder {
+        font-style: italic;
+        font-size: 15px; }
+      #footer .footer_item .column_desc input::-ms-input-placeholder {
+        font-style: italic;
+        font-size: 15px; }
+      #footer .footer_item .column_desc input::placeholder {
+        font-style: italic;
+        font-size: 15px; }
+    #footer .footer_item .column_desc input[type="submit"] {
+      color: white;
+      background-color: #e3207b;
+      border-color: #e3207b;
+      font-size: 15px; }
+#footer .footer_signature {
+  color: #999;
+  font-family: "Nunito";
+  line-height: 30px;
+  font-size: 17.6px;
+  text-align: center; }
+  #footer .footer_signature span {
+    color: red;
+    margin-right: 5px;
+    margin-left: 5px; }
+
+.button {
+  text-align: center;
+  background-color: #e3207b;
+  border-radius: 2px;
+  padding: 16px 24px;
+  -webkit-transition: 0.3s all ease;
+  transition: 0.3s all ease; }
+  .button:hover {
+    background-color: #aa0c57;
+    -webkit-transition: 0.3s all ease;
+    transition: 0.3s all ease; }
+  .button a {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-family: "Nunito";
+    font-size: 16px; }
+
+.djs_item {
+  position: relative;
+  margin-top: 50px; }
+  .djs_item .djs_image {
+    overflow: hidden; }
+    .djs_item .djs_image img {
+      width: 100%;
+      -webkit-transition: 0.3s all ease;
+      transition: 0.3s all ease; }
+  .djs_item:hover .djs_image img {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    -webkit-transition: 0.3s all ease;
+    transition: 0.3s all ease; }
+  .djs_item:hover .overflow {
+    opacity: 1;
+    -webkit-transition: 0.3s all ease;
+    transition: 0.3s all ease; }
+    .djs_item:hover .overflow ul {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      -webkit-transition: 0.3s all ease;
+      transition: 0.3s all ease; }
+  .djs_item .overflow {
+    -webkit-transition: 0.3s all ease;
+    transition: 0.3s all ease;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(225, 32, 123, 0.7);
+    text-align: center;
+    color: #FFFFFF;
+    font-family: "Nunito"; }
+    .djs_item .overflow ul {
+      -webkit-transition: 0.3s all ease;
+      transition: 0.3s all ease;
+      line-height: 30px;
+      text-align: center;
+      padding: 20% 7% 0% 7%;
+      -webkit-transform: translateY(50px);
+              transform: translateY(50px); }
+      .djs_item .overflow ul li {
+        font-size: 18px;
+        padding: 15px 0 0 0; }
+        .djs_item .overflow ul li h1 {
+          font-size: 25px; }
+      .djs_item .overflow ul ul {
+        padding: 0;
+        -webkit-transform: none;
+                transform: none; }
+        .djs_item .overflow ul ul li a {
+          color: #FFFFFF; }
+
+.events_item {
+  padding: 20px 5px; }
+  .events_item .events_image img {
+    width: 100%; }
+  .events_item .events_desc {
+    background-color: white;
+    padding: 24px; }
+    .events_item .events_desc ul {
+      line-height: 25px;
+      font-family: "Nunito"; }
+      .events_item .events_desc ul li span {
+        color: #999;
+        font-size: 14px; }
+      .events_item .events_desc ul li a {
+        text-decoration: none;
+        color: #e3207b;
+        font-size: 20px;
+        -webkit-transition: 0.3s all ease;
+        transition: 0.3s all ease; }
+        .events_item .events_desc ul li a:hover {
+          color: #aa0c57;
+          -webkit-transition: 0.3s all ease;
+          transition: 0.3s all ease; }
+
+.listerners_item {
+  background-color: #FFFFFF;
+  padding: 50px;
+  margin: 50px 0px; }
+  .listerners_item .listeners_image {
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+    margin: 0 auto; }
+    .listerners_item .listeners_image img {
+      width: 100%;
+      border-radius: 100%; }
+  .listerners_item .listeners_desc {
+    line-height: 30px;
+    padding: 15px 10px;
+    text-align: center;
+    color: #333333;
+    font-family: "Nunito"; }
+    .listerners_item .listeners_desc h1 {
+      font-size: 22px;
+      margin: 15px 0px; }
+    .listerners_item .listeners_desc p {
+      font-style: italic;
+      font-size: 18px; }
+
+.section_header .header_name {
+  padding: 0 0 12px; }
+  .section_header .header_name h1 {
+    font-family: "Oswald";
+    letter-spacing: 10px;
+    font-size: 32px;
+    font-weight: 600;
+    color: #FFFFFF;
+    position: relative;
+    padding: 0 0 20px;
+    margin: 0 0 28px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .section_header .header_name h1::before {
+      content: '';
+      background: #e3207b;
+      width: 70px;
+      height: 2px;
+      position: absolute;
+      bottom: 0; }
+.section_header .header_desc {
+  font-family: "Nunito";
+  color: #999;
+  font-size: 17.6px;
+  padding: 0 0 16px;
+  text-align: center;
+  line-height: 30px;
+  width: 45%;
+  margin: 0 auto; }
+
+#social {
+  background-color: #e3207b; }
+  #social .social_panel_full ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around; }
+    #social .social_panel_full ul li {
+      display: inline-block;
+      padding: 25px 70px;
+      text-align: center;
+      -webkit-transition: 0.3s all ease;
+      transition: 0.3s all ease; }
+      #social .social_panel_full ul li:hover {
+        background-color: #aa0c57;
+        -webkit-transition: 0.3s all ease;
+        transition: 0.3s all ease; }
+      #social .social_panel_full ul li a {
+        text-decoration: none;
+        color: #FFFFFF; }
+        #social .social_panel_full ul li a i {
+          font-size: 25px; }
+
+.social_mini li {
+  display: inline-block;
+  padding: 0px 20px 0px 0px !important;
+  text-align: center; }
+  .social_mini li a {
+    text-decoration: none; }
+    .social_mini li a i {
+      font-size: 17px; }
+
+.streaming_watch .streaming_image {
+  position: relative; }
+  .streaming_watch .streaming_image img {
+    width: 100%; }
+  .streaming_watch .streaming_image .circle {
+    width: 70px;
+    height: 70px;
+    border-radius: 100%;
+    background-color: white;
+    position: absolute;
+    top: 45%;
+    left: 45%;
+    cursor: pointer; }
+    .streaming_watch .streaming_image .circle::after {
+      content: '';
+      position: absolute;
+      top: 36%;
+      left: 40%;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 10px 0px 10px 20px;
+      border-color: transparent transparent transparent red; }
+
+.column_header .header_name {
+  padding: 0 0 12px; }
+  .column_header .header_name h1 {
+    font-family: "Oswald";
+    letter-spacing: 3px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #FFFFFF;
+    position: relative;
+    padding: 0 0 20px;
+    margin: 0 0 28px; }
+    .column_header .header_name h1::before {
+      content: '';
+      background: #e3207b;
+      width: 70px;
+      height: 2px;
+      position: absolute;
+      bottom: 0;
+      width: 40px !important; }
+
+.podcast_item_block .podcast_item {
+  padding: 50px 0px 0px 0px; }
+  .podcast_item_block .podcast_item .podcast_image img {
+    width: 100%; }
+.podcast_item_block .podcast_item_mini {
+  padding: 50px 0px 0px 0px;
+  height: 50%; }
+
+#footer, #djs, #podcast {
+  background-color: #222831; }
+
+#events, #listeners {
+  background-color: #13171d; }
+
+/*# sourceMappingURL=main.css.map */
