--- a/HOMEWORK/assets/css/scss/components/_buttons.scss
+++ b/HOMEWORK/assets/css/scss/components/_buttons.scss
@@ -1,4 +1,6 @@
 .button{
+    width:max-content;
+    margin:0 auto;
     text-align: center;
     background-color: $color-pink;
     border-radius: 2px; 
