--- a/Intro/assets/styles/pages/index.css
+++ b/Intro/assets/styles/pages/index.css
@@ -1,8 +1,7 @@
 #home .home-intro .intro-details h3 {
-  font-size: 20px;
-}
+  font-size: 20px; }
 
 #contact .contact-list .list-item {
-  color: #222831;
-}
+  color: #222831; }
+
 /*# sourceMappingURL=index.css.map */
