--- a/Intro/assets/styles/style.css
+++ b/Intro/assets/styles/style.css
@@ -2,14 +2,12 @@
   padding: 20px 15px;
   background-color: #e3207b;
   color: #fff;
-  border-radius: 5px;
-}
+  border-radius: 5px; }
 
 #home .home-intro .intro-details h3 {
-  font-size: 20px;
-}
+  font-size: 20px; }
 
 #contact .contact-list .list-item {
-  color: #222831;
-}
+  color: #222831; }
+
 /*# sourceMappingURL=style.css.map */
