--- a/HOMEWORK/assets/css/scss/components/_index.scss
+++ b/HOMEWORK/assets/css/scss/components/_index.scss
@@ -8,5 +8,6 @@
 @import './items-title';
 @import './streaming';
 @import './column_header';
-@import './podcast_item';
-@import './shows_item';
+@import './shows-item';
+@import './podcast';
+@import './intro-heading';
