--- a/Intro/assets/styles/components/index.css
+++ b/Intro/assets/styles/components/index.css
@@ -2,6 +2,6 @@
   padding: 20px 15px;
   background-color: #e3207b;
   color: #fff;
-  border-radius: 5px;
-}
+  border-radius: 5px; }
+
 /*# sourceMappingURL=index.css.map */
