--- a/HOMEWORK/assets/css/scss/fonts/_font-icon.scss
+++ b/HOMEWORK/assets/css/scss/fonts/_font-icon.scss
@@ -122,6 +122,9 @@
       -moz-osx-font-smoothing: grayscale;
     }
     
+    .icon-menu:before {
+      content: "\e9bd";
+    }
     .icon-heart:before {
       content: "\e9da";
     }
