--- a/HOMEWORK/assets/css/grid.css
+++ b/HOMEWORK/assets/css/grid.css
@@ -299,6 +299,7 @@ hr {
   margin-right: auto;
   margin-left: auto;
 }
+
 @media (min-width: 768px) {
   .container {
     width: 750px;
@@ -338,44 +339,46 @@ hr {
   padding-right: 15px;
   padding-left: 15px;
 }
+@media (max-width: 768px) {
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
 }
+
 .col-xs-12 {
-  width: 100%;
+  width: calc(100% / 1 - 30px);
 }
 .col-xs-11 {
-  width: 91.66666667%;
+  width: calc(100% * 11 / 12 - 30px);
 }
 .col-xs-10 {
-  width: 83.33333333%;
+  width: calc(100% * 5 / 6 - 30px);
 }
 .col-xs-9 {
-  width: 75%;
+  width: calc(100% * 3 / 4 - 30px);
 }
 .col-xs-8 {
-  width: 66.66666667%;
+  width: calc(100% * 2 / 4 - 30px);
 }
 .col-xs-7 {
-  width: 58.33333333%;
+  width: calc(100% * 7 / 12 - 30px);
 }
 .col-xs-6 {
-  width: 50%;
+  width: calc(100% / 2 - 30px);
 }
 .col-xs-5 {
-  width: 41.66666667%;
+  width: calc(100% * 5 / 12 - 30px);
 }
 .col-xs-4 {
-  width: 33.33333333%;
+  width: calc(100% / 3 - 30px);
 }
 .col-xs-3 {
-  width: 25%;
+  width: calc(100% / 4 - 30px);
 }
 .col-xs-2 {
-  width: 16.66666667%;
+  width: calc(100% / 6 - 30px);
 }
 .col-xs-1 {
-  width: 8.33333333%;
+  width: calc(100% / 12 - 30px);
 }
 .col-xs-pull-12 {
   right: 100%;
@@ -494,45 +497,46 @@ hr {
 .col-xs-offset-0 {
   margin-left: 0%;
 }
-@media (min-width: 768px) {
+}
+@media (min-width: 768px) and (max-width: 991px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
   }
   .col-sm-12 {
-    width: 100%;
+    width: calc(100% / 1 - 30px);
   }
   .col-sm-11 {
-    width: 91.66666667%;
+    width: calc(100% * 11 / 12 - 30px);
   }
   .col-sm-10 {
-    width: 83.33333333%;
+    width: calc(100% * 5 / 6 - 30px);
   }
   .col-sm-9 {
-    width: 75%;
+    width: calc(100% * 3 / 4 - 30px);
   }
   .col-sm-8 {
-    width: 66.66666667%;
+    width: calc(100% * 2 / 4 - 30px);
   }
   .col-sm-7 {
-    width: 58.33333333%;
+    width: calc(100% * 7 / 12 - 30px);
   }
   .col-sm-6 {
-    width: 50%;
+    width: calc(100% / 2 - 30px);
   }
   .col-sm-5 {
-    width: 41.66666667%;
+    width: calc(100% * 5 / 12 - 30px);
   }
   .col-sm-4 {
-    width: 33.33333333%;
+    width: calc(100% / 3 - 30px);
   }
   .col-sm-3 {
-    width: 25%;
+    width: calc(100% / 4 - 30px);
   }
   .col-sm-2 {
-    width: 16.66666667%;
+    width: calc(100% / 6 - 30px);
   }
   .col-sm-1 {
-    width: 8.33333333%;
+    width: calc(100% / 12 - 30px);
   }
   .col-sm-pull-12 {
     right: 100%;
@@ -652,45 +656,45 @@ hr {
     margin-left: 0%;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1199px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
   }
   .col-md-12 {
-    width: 100%;
+    width: calc(100% / 1 - 30px);
   }
   .col-md-11 {
-    width: 91.66666667%;
+    width: calc(100% * 11 / 12 - 30px);
   }
   .col-md-10 {
-    width: 83.33333333%;
+    width: calc(100% * 5 / 6 - 30px);
   }
   .col-md-9 {
-    width: 75%;
+    width: calc(100% * 3 / 4 - 30px);
   }
   .col-md-8 {
-    width: 66.66666667%;
+    width: calc(100% * 2 / 4 - 30px);
   }
   .col-md-7 {
-    width: 58.33333333%;
+    width: calc(100% * 7 / 12 - 30px);
   }
   .col-md-6 {
-    width: 50%;
+    width: calc(100% / 2 - 30px);
   }
   .col-md-5 {
-    width: 41.66666667%;
+    width: calc(100% * 5 / 12 - 30px);
   }
   .col-md-4 {
-    width: 33.33333333%;
+    width: calc(100% / 3 - 30px);
   }
   .col-md-3 {
-    width: 25%;
+    width: calc(100% / 4 - 30px);
   }
   .col-md-2 {
-    width: 16.66666667%;
+    width: calc(100% / 6 - 30px);
   }
   .col-md-1 {
-    width: 8.33333333%;
+    width: calc(100% / 12 - 30px);
   }
   .col-md-pull-12 {
     right: 100%;
