--- a/HOMEWORK/assets/css/scss/components/_intro-heading.scss
+++ b/HOMEWORK/assets/css/scss/components/_intro-heading.scss
@@ -1,6 +1,7 @@
 #intro{
-   padding: 50px 0px 200px;
-    
+   padding: 50px 0px 150px;
+background-repeat: no-repeat;
+background-size: cover;
 }
 
 .intro_header{
@@ -10,7 +11,7 @@
     font-size:64px;
 
     letter-spacing: 15px;
-    padding: 150px 180px 50px;
+    padding: 100px 0px 50px;
     line-height: 100px;
     font-weight: bold;
 }
