--- a/HOMEWORK/assets/css/scss/components/_social-panel.scss
+++ b/HOMEWORK/assets/css/scss/components/_social-panel.scss
@@ -42,3 +42,25 @@
 
 
 
+@media (max-width: 768px) {
+    #social{
+        .social_panel_full{
+            ul{
+                li{
+                padding:25px !important;
+            }
+        }
+        }
+    }   
+}
+@media (min-width: 768px) and (max-width: 991px) {
+    #social{
+        .social_panel_full{
+            ul{
+                li{
+                padding:25px 60px !important;
+            }
+        }
+        }
+    }   
+}
